# ClipToFile

./: .gitignore  CMakeLists.txt  ClipToFile.cpp  ClipToFile.manifest  build.cmd
